Fix header z-index

--- a/src/app/comonents/Header/Header.module.scss
+++ b/src/app/comonents/Header/Header.module.scss
@@ -5,6 +5,7 @@
   margin-bottom: 24px;
   box-shadow: $shadow;
   position: fixed;
+  z-index: 20;
   width: 100%;
   display: flex;
   justify-content: center;
